# Wissen2026

./: .env.example  .gitignore  README.md  docker-compose.test.yml  masterplan.md
backend/: README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: README.md  documents.py  error_handlers.py  health.py
backend/app/core/: config.py  database.py  errors.py
backend/app/db/: connection.py  session.py
backend/app/jobs/: README.md
backend/app/models/: README.md  documents.py  import_models.py
backend/app/observability/: auth_middleware.py  logging.py  middleware.py
backend/app/repositories/: documents.py  search.py
backend/app/schemas/: README.md  admin.py  auth.py  chat.py  documents.py  errors.py  jobs.py  observability.py  search.py
backend/app/services/: README.md  auth.py  chunking_service.py  import_service.py  ki_provider.py  markdown_normalizer.py  (+4 more)
backend/migrations/: README.md  env.py
backend/tests/: README.md  conftest.py  test_admin_search_index_api.py  test_chat_api.py  test_chat_persistence_service.py  test_chat_schemas.py  test_citation_mapper.py  test_context_builder.py  test_documents_import_api.py  test_documents_read_api.py  test_documents_read_service.py  test_documents_retry_import_api.py  test_documents_secure_api.py  test_fake_llm_provider.py  test_health.py  test_insufficient_context_policy.py  test_m4a_auth_core.py  test_observability.py  test_prompt_builder.py  test_rag_chat_service.py  test_search_api.py  test_search_index_service.py  test_search_service.py
(+299 files in other folders)
